<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>com.radcns</groupId>
	<artifactId>bird_plus</artifactId>
	<packaging>jar</packaging>
	<version>0.0.1</version>
	<name>radcns_bird_plus</name>
	<url>https://mozu123</url>
	<description>birdPlus</description>
	<properties>
		<java.version>17</java.version>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>	
		<maven.compiler.source>17</maven.compiler.source>
		<maven.compiler.target>17</maven.compiler.target>
	</properties>

	<dependencies>
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-engine</artifactId>
			<version>5.7.0</version>
			<scope>test</scope>
		</dependency>
		
        <dependency>
		    <groupId>com.googlecode.json-simple</groupId>
		    <artifactId>json-simple</artifactId>
		    <version>1.1.1</version>
		</dependency>

		<dependency>
		    <groupId>commons-codec</groupId>
		    <artifactId>commons-codec</artifactId>
		    <version>1.15</version>
		</dependency>
		
		<!--
		<dependency>
		    <groupId>org.springframework.boot</groupId>
		    <artifactId>spring-boot-starter-tomcat</artifactId>
		    <version>3.1.2</version>
		</dependency>
		-->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-devtools</artifactId>
			<scope>runtime</scope>
			<optional>true</optional>
			<version>3.1.4</version>
		</dependency>

		<dependency>
		    <groupId>org.springframework.boot</groupId>
		    <artifactId>spring-boot-starter-data-r2dbc</artifactId>
			<exclusions>
				<exclusion>
					<groupId>io.projectreactor.netty</groupId>
    	 			<artifactId>reactor-netty-core</artifactId>
				</exclusion>
			</exclusions>
		    <version>3.1.4</version>
		</dependency>
		<!-- 
			이 라이브러리는 graphql-java와 spring webflux starter를 포함합니다.
		-->
		<dependency>
		    <groupId>org.springframework.boot</groupId>
		    <artifactId>spring-boot-starter-webflux</artifactId>
		    <version>3.1.4</version>
		    <scope>compile</scope>
		</dependency>
		
		<dependency>
		    <groupId>org.springframework.boot</groupId>
		    <artifactId>spring-boot-starter-mail</artifactId>
		    <version>3.1.4</version>
		</dependency>
		<dependency>
		    <groupId>org.springframework.boot</groupId>
		    <artifactId>spring-boot-starter-validation</artifactId>
		    <version>3.1.4</version>
		</dependency>
		<dependency>
		    <groupId>org.springframework.boot</groupId>
		    <artifactId>spring-boot-starter-security</artifactId>
		    <version>3.1.4</version>
		</dependency>
		
		<dependency>
		    <groupId>org.springdoc</groupId>
		    <artifactId>springdoc-openapi-starter-webflux-ui</artifactId>
		    <version>2.1.0</version>
		</dependency>
		
		<!--
			이미 존재하는 종속성 - spring r2dbc starter
		<dependency>
			<groupId>io.r2dbc</groupId>
			<artifactId>r2dbc-pool</artifactId>
			<version>1.0.0.RELEASE</version>
		</dependency>
		-->
		
		<dependency>
		    <groupId>org.postgresql</groupId>
		    <artifactId>r2dbc-postgresql</artifactId>
		    <version>1.0.2.RELEASE</version>
		    <scope>runtime</scope>
			<exclusions>
				<exclusion>
					<groupId>io.projectreactor.netty</groupId>
    	 			<artifactId>reactor-netty-core</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
		    <groupId>io.r2dbc</groupId>
		    <artifactId>r2dbc-postgresql</artifactId>
		    <version>0.8.13.RELEASE</version>
		</dependency>
		
		<dependency>
			<groupId>io.jsonwebtoken</groupId>
			<artifactId>jjwt-api</artifactId>
			<version>0.11.5</version>
		</dependency>
		<dependency>
			<groupId>io.jsonwebtoken</groupId>
			<artifactId>jjwt-impl</artifactId>
			<version>0.11.5</version>
			<scope>runtime</scope>
		</dependency>
		
		<dependency>
		    <groupId>io.jsonwebtoken</groupId>
		    <artifactId>jjwt-jackson</artifactId>
		    <version>0.11.5</version>
		</dependency>

		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<version>1.18.28</version>
		</dependency>
		
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-thymeleaf</artifactId>
			<version>3.0.4</version>
		</dependency>	
		<dependency>
		    <groupId>nz.net.ultraq.thymeleaf</groupId>
		    <artifactId>thymeleaf-layout-dialect</artifactId>
		    <version>3.3.0</version>
			<exclusions>
				
				<exclusion>
					<groupId>org.thymeleaf</groupId>
					<artifactId>thymeleaf</artifactId>
				</exclusion>
				
				<exclusion>
					<groupId>org.slf4j</groupId>
					<artifactId>slf4j-api</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
		    <groupId>com.google.guava</groupId>
		    <artifactId>guava</artifactId>
		    <version>32.1.1-jre</version>
		</dependency>
		<dependency>
		    <groupId>fr.inria.gforge.spoon</groupId>
		    <artifactId>spoon-core</artifactId>
		    <version>10.4.2</version>
			<exclusions>
				<exclusion>
					<groupId>org.slf4j</groupId>
					<artifactId>slf4j-api</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
		    <groupId>org.postgresql</groupId>
		    <artifactId>postgresql</artifactId>
		    <version>42.6.0</version>
		</dependency>

	</dependencies>
	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>com.fasterxml.jackson.core</groupId>
				<artifactId>jackson-databind</artifactId>
				<version>2.15.2</version>
			</dependency>
		</dependencies>
	</dependencyManagement>
	<!-- 
				빌드시 사용할 메이븐 플러그인 
			-->
	<build>
		<plugins>
			<plugin>
				<artifactId>maven-clean-plugin</artifactId>
				<version>3.1.0</version>
			</plugin>
			<!-- see http://maven.apache.org/ref/current/maven-core/default-bindings.html#Plugin_bindings_for_war_packaging -->
			<plugin>
				<artifactId>maven-resources-plugin</artifactId>
			    <version>3.0.2</version>
			    <executions>
			        <execution>
			            <id>copy-resources</id>
			            <phase>validate</phase>
			            <goals>
			                <goal>copy-resources</goal>
			            </goals>
			            <configuration>
			                <resources>
			                    <resource>
			                        <directory>src/main/resources/bird-plus-desktop/bird-plus/view/</directory>
			                        <filtering>true</filtering>
			                    </resource>
			                </resources>
			                <outputDirectory>${basedir}/target/classes/resources</outputDirectory>
			            </configuration>
			        </execution>
			    </executions>
			</plugin>
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.1</version>
			<configuration>
			    <source>${java.version}</source>	
		      	<target>${java.version}</target>
	    	</configuration>
			</plugin>
			<plugin>
				<artifactId>maven-install-plugin</artifactId>
				<version>2.5.2</version>
			</plugin>
			<plugin>
				<artifactId>maven-deploy-plugin</artifactId>
				<version>2.8.2</version>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>2.22.1</version>
				<configuration>
					<skipTests>true</skipTests>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
				<version>3.1.2</version>
				<configuration>
					<addResources>true</addResources>
					<mainClass>com.radcns.bird_plus.BirdPlusApplication</mainClass>
					<excludes>
						<exclude>
							<groupId>org.projectlombok</groupId>
							<artifactId>lombok</artifactId>
						</exclude>
					</excludes>
				</configuration>
				<executions>
					<execution>
						<goals>
							<goal>repackage</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>
</project>